# comfyui-imgloader

./: .gitignore  LICENSE  QUICKSTART.md  README.md  __init__.py  example_usage.py  imgloader_node.py  pyproject.toml  requirements.txt  setup.py  test_imgloader.py
.github/: copilot-instructions.md
.github/workflows/: publish.yml
js/: imgloader.js
