[project]
name = "imgloader"
description = "A powerful and versatile custom node for ComfyUI that provides multiple ways to load images into your workflows."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["# ComfyUI Universal Image Loader Requirements", "# These dependencies are typically already available in ComfyUI installations", "# Core dependencies", "torch>=1.9.0", "numpy>=1.20.0", "Pillow>=8.0.0", "# Optional dependencies for enhanced functionality", "# (usually already included with ComfyUI)", "torchvision>=0.10.0", "# Development dependencies (optional)", "# black>=22.0.0", "# pytest>=6.0.0", "# pylint>=2.12.0"]

[project.urls]
Repository = "https://github.com/negaga53/comfyui-imgloader"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/negaga53/comfyui-imgloader/wiki"
"Bug Tracker" = "https://github.com/negaga53/comfyui-imgloader/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "comfyui-imgloader"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

